--- a/style/mainframe.css
+++ b/style/mainframe.css
@@ -64,6 +64,10 @@
     padding: 8px;
 }
 
+.sidebar-footer a:hover {
+    background-color: #091931;
+}
+
 .header {
     position: fixed;
     top: 0;
