--- a/style/board_style.css
+++ b/style/board_style.css
@@ -2,10 +2,11 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
-    max-width: 1200px;
+    max-width: 1400px;
 }
 .board_menu{
     display: flex;
+    height: 232px;
     justify-content: space-between;
     align-items: center;
 }
