--- a/style/mainframe.css
+++ b/style/mainframe.css
@@ -18,8 +18,13 @@
 
 .body {
     display: flex;
-    justify-content: space-between;
     font-family: "Inter";
+}
+
+article{
+    display: flex;
+    flex-direction: column;
+    flex: 1;
 }
 
 .sidebar-nav {
@@ -69,10 +74,6 @@
 }
 
 .header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
     box-shadow: 2px 4px 8px rgba(0, 0, 0, .2);
     z-index: 20;
     font-weight: 400;
@@ -85,7 +86,7 @@
     justify-content: space-between;
     align-items: center;
     margin-right: auto;
-    padding-left: 348px;
+    padding-left: calc(348px - 232px);
     padding-right: 40px;
     padding-top: 20px;
     padding-bottom: 20px;
@@ -105,11 +106,8 @@
 }
 
 .main-content {
-    position: fixed;
-    top: 96px;
-    left: 348px;
     max-width: 1440px;
-    margin-right: auto;
+    padding: 0px 64px;
 }
 
 .current-selection {
