--- a/style/board_style.css
+++ b/style/board_style.css
@@ -4,14 +4,38 @@
     gap: 20px;
     max-width: 1400px;
 }
+
 .board_menu{
     display: flex;
     height: 232px;
     justify-content: space-between;
     align-items: center;
 }
+
 .board_controls{
     display: flex;
-    justify-content: center;
+    justify-content: space-between; /* geändert von center zu space-between */
     gap: 10px;
+}
+
+.table_header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    min-width: 320px;     /* Mindestbreite für Responsiveness */
+    width: 100%;          /* Flexibel mit dem Container */
+    max-width: 1400px;    /* Optional, für maximale Breite */
+}
+
+.column_title{
+    font-size: 20px;
+    font-weight: 700;
+}
+
+.column_header{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    min-width: 220px;
+    justify-content: space-between;
 }
