--- a/style/board_style.css
+++ b/style/board_style.css
@@ -10,6 +10,7 @@
     height: 232px;
     justify-content: space-between;
     align-items: center;
+    font-family: "Inter_bold";
 }
 
 .board_controls{
@@ -22,9 +23,9 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    min-width: 320px;     /* Mindestbreite für Responsiveness */
-    width: 100%;          /* Flexibel mit dem Container */
-    max-width: 1400px;    /* Optional, für maximale Breite */
+    min-width: 320px;
+    width: 100%;
+    gap: 16px;
 }
 
 .column_title{
@@ -36,6 +37,36 @@
     display: flex;
     align-items: center;
     gap: 10px;
-    min-width: 220px;
+    min-width: 200px;
     justify-content: space-between;
+}
+
+h1{
+    font-size: 60px;
+    font-weight: 700;
+}
+
+.search_task{
+    border: 1px solid;
+    border-color: #A8A8A8;
+    border-radius: 10px;
+    padding: 8px 16px;
+    display: flex;
+    gap: 10px
+}
+
+.search_task input{
+    border: none;
+    outline: none;
+    font-size: 20px;
+    font-weight: 400;
+    width: 200px;
+    font-family: "Inter";
+    border-right: 1px solid #A8A8A8;
+}
+
+.search_task button{
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
 }
