--- a/style/board_style.css
+++ b/style/board_style.css
@@ -16,7 +16,7 @@
 .board_controls{
     display: flex;
     justify-content: space-between; /* geändert von center zu space-between */
-    gap: 10px;
+    gap: 32px;
 }
 
 .table_header{
@@ -42,7 +42,7 @@
 }
 
 h1{
-    font-size: 60px;
+    font-size: 61px;
     font-weight: 700;
 }
 
@@ -65,8 +65,26 @@ h1{
     border-right: 1px solid #A8A8A8;
 }
 
+.search_task input::placeholder {
+    color: #D1D1D1;
+}
+
 .search_task button{
     background-color: transparent;
     border: none;
     cursor: pointer;
+}
+
+.button_add_task{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    background-color: #2A3647;
+    border: none;
+    border-radius: 10px;
+    padding: 8px 16px;
+    cursor: pointer;
+    color:white;
+    font-family: "Inter_bold";
+    font-size: 21px;
 }
