--- a/style/mainframe.css
+++ b/style/mainframe.css
@@ -113,6 +113,8 @@ article{
 .main-content {
     max-width: 1440px;
     padding: 0px 64px;
+    background-color: #F6F7F8;
+    height: 100%;
 }
 
 .current-selection {
