--- a/style/board_style.css
+++ b/style/board_style.css
@@ -11,6 +11,7 @@
     justify-content: space-between;
     align-items: center;
     font-family: "Inter_bold";
+    margin-right: 24px;
 }
 
 .board_controls{
@@ -48,7 +49,13 @@ h1{
     border-radius: 10px;
     padding: 8px 16px;
     display: flex;
-    gap: 10px
+    gap: 10px;
+    background-color: white;
+}
+
+/* Rahmenfarbe ändern, wenn das Input-Feld fokussiert ist */
+.search_task:has(input:focus) {
+    border-color: #29ABE2;
 }
 
 .search_task input{
@@ -83,6 +90,11 @@ h1{
     color:white;
     font-family: "Inter_bold";
     font-size: 21px;
+}
+
+.button_add_task:hover{
+    background-color: #29ABE2;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .table_header .column_header button{
