update position of navbar regarding logo img

--- a/style/mainframe.css
+++ b/style/mainframe.css
@@ -46,6 +46,12 @@ article{
     background-color: #2A3D59;
 }
 
+.sidebar_upper_section{
+    display: flex;
+    flex-direction: column;
+    gap: 150px;
+}
+
 .sidebar-nav-section {
     display: flex;
     justify-content: flex-start;
