--- a/style/board_style.css
+++ b/style/board_style.css
@@ -113,10 +113,23 @@ h1{
 }
 
 .board_table .column_content{
-    background-color: #e5e7e8;
+    background-color: #f0f2f3;
     min-height: 500px;
     width: calc(100% / 4);
     margin-top: 4px;
     box-sizing: border-box;
     word-wrap: break-word;
+}
+
+.no_task_yet{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 48px;
+    color: #A8A8A8;
+    font-size: 16px;
+    font-family: "Inter";
+    border: 1px dashed #A8A8A8;
+    background-color: #E7E7E7;
+    border-radius: 10px;
 }
