--- a/style/add_task.css
+++ b/style/add_task.css
@@ -16,6 +16,7 @@
 .task-details {
     display: flex;
     justify-content: space-between;
+    margin-top: 48px;
 }
 
 .input-form {
@@ -118,6 +119,7 @@
     color: white;
 }
 
-.description-input {
+.description {
     flex: 1;
 }
+
