--- a/style/add_task.css
+++ b/style/add_task.css
@@ -45,7 +45,7 @@
 
 .priority-button {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     font-size: 20px;
     font-weight: 400;
@@ -53,7 +53,10 @@
     gap: 8px;
     padding: 16px 10px;
     border-radius: 10px;
-    border: none
+    border: solid 1px;
+    border-color: #D1D1D1;
+    background-color: white;
+    flex: 1;
 }
 
 .priority-section {
@@ -102,8 +105,7 @@
 
 .action-button-section {
     display: flex;
-    justify-content: flex-end;
-    gap: 16px;
+    justify-content: space-between;
     margin-top: 64px;
 }
 
@@ -123,3 +125,20 @@
     flex: 1;
 }
 
+.select-input {
+    padding: 12px 16px;
+    border: solid 1px;
+    border-radius: 10px;
+    border-color: #D1D1D1;
+}
+
+.button-section {
+    display: flex;
+    justify-content: center;
+    gap: 16px;
+}
+
+.required-text {
+    font-size: 20px;
+    line-height: 120%;
+}
