replaced description input tag with textarea for text align

--- a/style/add_task.css
+++ b/style/add_task.css
@@ -135,6 +135,9 @@
 
 .description {
     flex: 1;
+    font-size: 20px;
+    line-height: 120%;
+    font-family: "Inter";
 }
 
 .select-input {
@@ -142,6 +145,8 @@
     border: solid 1px;
     border-radius: 10px;
     border-color: #D1D1D1;
+    font-size: 20px;
+    line-height: 120%;
 }
 
 .button-section {
