--- a/style/board_style.css
+++ b/style/board_style.css
@@ -108,7 +108,6 @@ h1{
 }
 
 .board_table .column_content{
-    background-color: #f0f2f3;
     min-height: 500px;
     width: calc(100% / 4);
     margin-top: 8px;
@@ -250,33 +249,60 @@ h1{
     display: flex;
     justify-content: center;
     align-items: center;
+
     visibility: hidden;
     opacity: 0;
+    /* transition: opacity 0.5s ease-in-out, visibility 0s 0.5s; */
 }
 
 .overlay.show {
     visibility: visible;
     opacity: 1;
+    transition-delay: 0s;
 }
 
 .overlay_content {
     padding: 48px 40px;
     box-sizing: border-box;
-    visibility: hidden;
     opacity: 0;
     transform: translateX(200%);
-    transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out, visibility 0s 0.5s;
+    transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
 
-    width: 30%;
-    height: 60%;
+    max-width: 500px;
+    min-height: 600px;
+    max-height: 900px;
     background-color: white;
     border-radius: 30px;
     z-index: 1000;
+
+    font-family: "Inter_Bold";
 }
 
 .overlay_content.show {
-    visibility: visible;
     opacity: 1;
     transform: translateX(0);
-    transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
+}
+
+.overlay_content .overlay_header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.overlay_content .overlay_header .category_overlay {
+    font-size: 23px;
+    font-weight: 400;
+    color: white;
+    background-color: #0038FF;
+    font-family: "Inter";
+    padding: 4px 24px;
+    border-radius: 8px;
+}
+
+.overlay_content .overlay_header .close_overlay_button{
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    display: flex;
+    padding: 0px;
 }
