--- a/style/board_style.css
+++ b/style/board_style.css
@@ -252,7 +252,6 @@ h1{
 
     visibility: hidden;
     opacity: 0;
-    /* transition: opacity 0.5s ease-in-out, visibility 0s 0.5s; */
 }
 
 .overlay.show {
@@ -328,4 +327,36 @@ h1{
 .overlay_content .due_date_info,
 .overlay_content .priority_info{
     display: flex;
+}
+
+.overlay_content .edit_overlay_button_container{
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+}
+
+.overlay_content .edit_overlay_button_container .edit_overlay_button{
+    display: flex;
+    gap: 8px;
+    padding: 0px 8px;
+    cursor: pointer;
+    color:#2A3647;
+    background-color: transparent;
+    border: none;
+}
+
+.overlay_content .edit_overlay_button_container{
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    gap:8px
+}
+
+.overlay_content .edit_overlay_button_container .seperator{
+    border-right: 1px solid #A8A8A8;
+}
+
+.overlay_content .edit_overlay_button_container .edit_overlay_button p{
+    font-size: 16px;
+    font-weight: 400;
 }
