--- a/style/board_style.css
+++ b/style/board_style.css
@@ -370,3 +370,14 @@ h1{
 .overlay_content .priority_info .priority_content .priority_indicator{
     display: flex;
 }
+
+.overlay_content .assigned_users_info .assigned_users{
+    margin-top: 8px
+}
+
+.overlay_content .assigned_users_info .assigned_users .assigned_user_content{
+    display: flex;
+    gap: 16px;
+    align-items: center;
+    padding: 7px 16px;
+}
