--- a/style/board_overlay_style.css
+++ b/style/board_overlay_style.css
@@ -142,3 +142,22 @@
     align-items: center;
     padding: 7px 16px;
 }
+
+.overlay_content .subtasks_info .subtasks_list{
+    margin-top: 8px;
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+}
+
+.overlay_content .subtasks_info .subtasks_list .subtask_list_item{
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    padding-left: 20px;
+}
+
+.overlay_content .subtasks_info .subtasks_list .subtask_list_item p{
+    font-size: 16px;
+    font-weight: 400;
+}
