feat: added html structure for main contact view

--- a/style/contacts.css
+++ b/style/contacts.css
@@ -84,3 +84,38 @@
     font-size: 27px;
 }
 
+.contact-main-view {
+
+}
+
+.main-name {
+
+}
+
+.two-letter-name{
+
+}
+
+.name-field{
+
+}
+
+.fullname{
+
+}
+
+
+
+
+
+
+
+
+
+.mail-display{
+
+}
+
+.phone-display{
+    
+}
