--- a/style/standard.css
+++ b/style/standard.css
@@ -2,6 +2,19 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
     text-decoration: none;
 }
 
+body {
+    font-family: "Inter", sans-serif;
+    background: #f6f7f8;    
+    display: flex;
+    justify-content: center;  
+}
+
+.body {
+    width: 100%;
+}
