--- a/style/mainframe.css
+++ b/style/mainframe.css
@@ -131,3 +131,15 @@ article{
 .current-selection {
     background-color: #091931;
 }
+article {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+.content-wrapper {
+    max-width: 1440px;  
+    width: 100%;
+    min-height: 100vh;
+    display: flex;       
+    background: #f6f7f8;
+}
