--- a/style/board_overlay_style.css
+++ b/style/board_overlay_style.css
@@ -28,9 +28,9 @@
     transform: translateX(200%);
     transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
 
-    max-width: 500px;
-    min-height: 600px;
-    max-height: 900px;
+    width: 500px;
+    /* min-height: 600px; */
+    height: 900px;
     background-color: white;
     border-radius: 30px;
     z-index: 1000;
@@ -119,7 +119,7 @@
     gap:8px
 }
 
-.overlay_content .edit_overlay_button_container .seperator{
+.overlay_content .edit_overlay_button_container .seperator_overlay{
     border-right: 1px solid #A8A8A8;
 }
 
