--- a/style/contacts.css
+++ b/style/contacts.css
@@ -48,8 +48,6 @@
 .single-letter {
     margin: 8px;
     padding: 17px 36px;
-    font-size: 20px;
-    font-weight: 400;
 }
 
 .single-letter-section {
@@ -122,18 +120,21 @@
     font-size: 47px;
 }
 
-.main-name-btns{
+.main-name-btns {
     display: flex;
     gap: 13px;
 }
 
-.name-btn{
+.name-btn {
     display: flex;
     align-items: center;
     border: none;
     background-color: transparent;
     cursor: pointer;
     gap: 8px;
+}
+
+.font-size-16{
     font-weight: 400;
     font-size: 16px;
 }
@@ -141,8 +142,6 @@
 .sub-header-information {
     margin-top: 54px;
     margin-bottom: 54px;
-    font-weight: 400;
-    font-size: 20px;
 }
 
 .info-text {
@@ -150,10 +149,47 @@
     font-size: 16px;
 }
 
-.info-display{
+.info-display {
     display: flex;
     flex-direction: column;
     margin-bottom: 22px;
     gap: 15px;
 }
 
+.list-user {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    padding-top: 15px;
+    padding-left: 36px;
+    cursor: pointer;
+    gap: 35px;
+}
+
+.two-letter-name-small {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: orange;
+    color: white;
+    border-radius: 45px;
+    width: 42px;
+    height: 42px;
+}
+
+.list-info {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 5px;
+}
+
+.color-mail {
+    color: #007CEE;
+    cursor: pointer;
+}
+
+.font-size-20 {
+    font-weight: 400;
+    font-size: 20px;
+}
