--- a/style/add_task.css
+++ b/style/add_task.css
@@ -209,6 +209,7 @@
     font-size: 20px;
     line-height: 120%;
     font-weight: 400;
+    background-color: white;
 }
 
 .subtask-section button {
@@ -220,7 +221,7 @@
 }
 
 .subtask-section aside {
-    display: flex;
+    display: none;
     justify-content: center;
     gap: 4px;
     align-items: center;
