--- a/style/board_style.css
+++ b/style/board_style.css
@@ -161,7 +161,7 @@ h1{
     background-color: white;
     border-radius: 24px;
     padding: 16px;
-    cursor: grab;
+    cursor: pointer;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -235,4 +235,7 @@ h1{
 }
 .assigned_user_avatar:first-child {
     margin-left: 0; 
+}
+.single_task_content.drag-tilt {
+    transform: rotateZ(5deg);
 }
