added cursor pointer to all buttons

--- a/style/add_task.css
+++ b/style/add_task.css
@@ -53,6 +53,7 @@
     border-color: #D1D1D1;
     background-color: white;
     flex: 1;
+    cursor: pointer;
 }
 
 .priority-button:hover {
@@ -121,6 +122,7 @@
     padding: 10px;
     border: solid 1px;
     border-color: #2A3647;
+    cursor: pointer;
 }
 
 .action-button-section {
@@ -249,6 +251,12 @@
     flex-direction: column;
 }
 
+.contact-selector {
+    display: none;
+    position: relative;
+    top: 0px;
+}
+
 .contact-button {
     display: flex;
     justify-content: space-between;
@@ -260,6 +268,7 @@
     background-color: white;
     font-size: 20px;
     line-height: 120%;
+    cursor: pointer;
 }
 
 .contact-select-button {
@@ -267,6 +276,7 @@
     justify-content: space-between;
     align-items: center;
     flex: 1;
+    cursor: pointer;
 }
 
 .contact-element {
