--- a/style/add_task.css
+++ b/style/add_task.css
@@ -289,6 +289,7 @@
 
 .contact-element :hover {
     background-color: #F6F7F8;
+    color: black;
 }
 
 .contact-element {
@@ -307,4 +308,11 @@
 .assigned-contact button{
     background-color: #2A3647;
     color: white;
+}
+
+.rendered-contacts {
+    display: flex;
+    gap: 8px;
+    margin-top: 8px;
+    justify-content: flex-start;
 }
