--- a/style/add_task.css
+++ b/style/add_task.css
@@ -316,3 +316,7 @@
     margin-top: 8px;
     justify-content: flex-start;
 }
+
+.checkbox-filter {
+    filter: brightness(0) saturate(100%) invert(100%) sepia(100%) saturate(0%) hue-rotate(9deg) brightness(107%) contrast(101%);
+}
