contact select frame now scrollable

--- a/style/add_task.css
+++ b/style/add_task.css
@@ -261,6 +261,8 @@
 .contact-selector {
     display: none;
     position: relative;
+    overflow-y: scroll;
+    max-height: 200px;
 }
 
 .contact-selector ul {
