--- a/style/add_task.css
+++ b/style/add_task.css
@@ -347,3 +347,7 @@ textarea.task-input {
 .checkbox-filter {
     filter: brightness(0) saturate(100%) invert(100%) sepia(100%) saturate(0%) hue-rotate(9deg) brightness(107%) contrast(101%);
 }
+
+.article-bg {
+        background-color: #F6F7F8;
+}
