--- a/style/board_overlay_style.css
+++ b/style/board_overlay_style.css
@@ -244,12 +244,29 @@
     transition-delay: 0s;
 }
 
-.overlay_content .category_template{
+.overlay_content .edit_category_container{
     visibility: hidden;
+    opacity: 0;
+    height: 0;
+    min-height: 0;
+    max-height: 0;
+    padding: 0;
+    margin: 0;
+    overflow: hidden;
+    pointer-events: none;
+    display: none;
 }
 
-.overlay_content .category_template.show{
+.overlay_content .edit_category_container.show{
     visibility: visible;
     opacity: 1;
     transition-delay: 0s;
+    height: unset;
+    min-height: unset;
+    max-height: unset;
+    padding: unset;
+    margin: unset;
+    overflow: unset;
+    pointer-events: unset;
+    display: unset;
 }
