--- a/style/login.css
+++ b/style/login.css
@@ -158,6 +158,7 @@
     font-family: Inter, sans-serif;
     font-size: 21px;
     font-weight: 700;
+    padding: 0 12px;
     cursor: pointer;
     transition: all 0.3s ease;
 }
