--- a/style/mainframe.css
+++ b/style/mainframe.css
@@ -106,7 +106,7 @@ article{
     justify-content: space-between;
     align-items: center;
     margin-right: auto;
-    padding: 20px 40px 20px calc(116px);
+    padding: 20px 40px 20px 116px;
     max-width: 1440px;
 }
 
@@ -135,24 +135,7 @@ article{
 .current-selection {
     background-color: #091931;
 }
-article {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-}
-.content-wrapper {
-    max-width: 1440px;  
-    width: 100%;
-    min-height: 100vh;
-    display: flex;       
-    background: #f6f7f8;
-}
 
-article {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-}
 .content-wrapper {
     max-width: 1440px;  
     width: 100%;
