--- a/style/login.css
+++ b/style/login.css
@@ -1,5 +1,7 @@
 .login-wrapper {
     width: 100%;
+    max-width: 1440px;
+    margin: 0 auto;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
@@ -66,7 +68,7 @@
     padding: 48px 48px;
     width: 100%;
     max-width: 720px;
-    margin: 280px auto 0;;          
+    margin: 280px auto 0;          
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -366,4 +368,12 @@
         margin-top: 56px;
         padding-bottom: 40px;
     }
+}
+
+.login-error-message {
+    margin-top: 16px;
+    font-size: 14px;
+    color: #FF3B3B;
+    text-align: center;
+    min-height: 18px; /* damit der Bereich nicht springt */
 }
