--- a/style/summary.css
+++ b/style/summary.css
@@ -1,6 +1,3 @@
-body {
-    background: #f6f7f8;    
-}
 .summary-title-wrapper {
     display: flex;
     align-items: center;
@@ -53,7 +50,7 @@ body {
     flex-shrink: 0;
 }
 
-.row {
+.summary-row {
     display: flex;
     gap: 32px;
 }
@@ -100,27 +97,16 @@ body {
     margin-top: 4px;
 }
 
-.row-1 {
-    gap: 32px; 
-}
-.todo-card, .done-card {
-    width: 264px; 
+.summary-row-urgent .urgent-card {
+    width: 560px;
 }
 
-.row-2 .urgent-card {
-    width: 560px; 
-}
-
-.row-3 {
-    gap: 32px; 
+.summary-row-stats {
+    gap: 32px;
 }
 .board-card, .progress-card, .feedback-card {
     width: 168px; 
     height: 168px;
-}
-
-.row-3 .summary-card {
-    flex: 1;
 }
 
 .todo-card {
@@ -461,12 +447,6 @@ body {
     color: #29ABE2; 
 }
 
-.sidebar-upper-section{
-    display: flex;
-    flex-direction: column;
-    gap: 150px;
-}
-
 .main-content {
     margin-top: 110px; 
 }
@@ -479,13 +459,9 @@ body {
     background-color: #091931;
 }
 
-.sidebar-nav :hover {
-    background-color: #091931;
-}
-
 .header-avatar {
-    width: 50px;
-    height: 50px;
+    width: 56px;
+    height: 56px;
     border-radius: 50%;
     background-color: #FFFFFF;            
     border: 3px solid #2A3647;          
