added responsive logo to header

--- a/style/add_task_responsive.css
+++ b/style/add_task_responsive.css
@@ -18,7 +18,7 @@
     }
 
     .header-nav {
-        justify-content: flex-end;
+        justify-content: space-between;
     }
 
     .body {
@@ -55,6 +55,11 @@
 
     .main-content {
         padding: 16px 64px;
+    }
+
+    .logo-responsive {
+        display: block;
+        height: 56px;
     }
 
 }
