update add task overlay with buttons clear and create task

--- a/style/add_task.css
+++ b/style/add_task.css
@@ -136,6 +136,7 @@ textarea.task-input {
     border: solid 1px;
     border-color: #2A3647;
     cursor: pointer;
+    background-color: transparent;
 }
 
 .action-button-section {
